test/compile-fail/call__args_wrong_type.he
fn main
{
    fn plus (a: int, b: int) { a + b; }
    plus (1, "2"); //~ ERROR 3001
}
